<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:background="@color/colorBackground"
    android:columnCount="4"
    android:orientation="vertical"
    android:rowCount="4">


    <TextView
        android:id="@+id/dialog_tite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_gravity="center"
        android:layout_row="0"
        android:padding="@dimen/activity_vertical_margin"
        android:text="Large Text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/colorBlack" />

    <EditText
        android:id="@+id/weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_row="2"
        android:backgroundTint="@color/colorBlack"
        android:ems="10"
        android:hint="@string/enter_weight"
        android:inputType="number"
        android:padding="@dimen/activity_vertical_margin"
        android:textColor="#FFFFFF"
        android:textCursorDrawable="@color/colorPrimary"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_gravity="center"
        android:layout_row="2"
        android:padding="@dimen/activity_vertical_margin"
        android:text="Kg/Lbs"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colorPrimary" />

    <Button
        android:id="@+id/choose_unit"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="center"
        android:layout_row="3"
        android:background="@drawable/button_ripple"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/choose_unit"
        android:textColor="@color/colorPrimary" />

    <Button
        android:id="@+id/cancel"
        android:background="@drawable/button_ripple"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="center"
        android:layout_row="3"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="Cancel"
        android:textColor="@color/colorPrimary" />

    <Button
        android:id="@+id/ok"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_gravity="center"
        android:layout_row="3"
        android:padding="@dimen/activity_horizontal_margin"
        android:background="@drawable/button_ripple"
        android:text="@string/ok"
        android:textColor="@color/colorPrimary" />
</GridLayout>
